--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,12 @@
       LCO Signup Form
     </h5>
     <div class="card-body">
-      <form [formGroup]="registerForm">
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-row">
           <div class="form-group col-6">
             <label>First Name</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" 
+            formControlName="firstName"/>
             <div class="text-warning">
               <div>
                 First Name is required
@@ -18,7 +19,8 @@
           </div>
           <div class="form-group col-6">
             <label>Last Name</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control"
+            formControlName="lastName" />
             <div class="text-warning">
               <div>
                 Last Name is required
@@ -28,7 +30,8 @@
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control"
+          formControlName="email" />
           <div class="text-warning">
             <div>Email is required</div>
             <div>
@@ -45,7 +48,8 @@
         <div class="form-row">
           <div class="form-group col">
             <label>Password</label>
-            <input type="password" class="form-control" />
+            <input type="password" class="form-control"
+            formControlName="password" />
             <div class="text-warning">
               <div>Password is required</div>
               <div>
@@ -55,7 +59,8 @@
           </div>
           <div class="form-group col">
             <label>Confirm Password</label>
-            <input type="password" class="form-control" />
+            <input type="password" class="form-control" 
+            formControlName="confirmPassword"/>
             <div class="text-warning">
               <div>
                 Confirm Password is required
@@ -67,7 +72,8 @@
           </div>
         </div>
         <div class="form-group form-check">
-          <input type="checkbox" id="acceptTerms" class="form-check-input" />
+          <input type="checkbox" id="acceptTerms" class="form-check-input"
+          formControlName="tcs" />
           <label for="acceptTerms" class="form-check-label"
             >Accept Terms & Conditions</label
           >
@@ -77,7 +83,7 @@
         </div>
         <div class="text-center">
           <button class="btn btn-success btn-lg px-4 mr-3">Register</button>
-          <button class="btn btn-warning" type="reset">
+          <button class="btn btn-warning" type="reset" (click)="onReset()">
             Reset
           </button>
           <p class="text white">Value: {{ registerForm.value | json }}</p>
